--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,13 @@
       "name": "C/C++ Runner: Debug Session",
       "type": "cppdbg",
       "request": "launch",
-      "args": [],
+      "args": [
+        ""
+      ],
       "stopAtEntry": false,
-      "cwd": "c:\\.GitHub\\cpp-codebreaker-unreal",
+      "cwd": "c:/.GitHub/cpp-codebreaker-unreal",
       "environment": [],
-      "program": "c:\\.GitHub\\cpp-codebreaker-unreal\\build\\Debug\\outDebug",
+      "program": "c:/.GitHub/cpp-codebreaker-unreal/build/Debug/outDebug",
       "internalConsoleOptions": "openOnSessionStart",
       "MIMode": "gdb",
       "miDebuggerPath": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin\\gdb.exe",
